--- a/multichannel-widget/src/main/res/layout/activity_loading.xml
+++ b/multichannel-widget/src/main/res/layout/activity_loading.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context="com.qiscus.qiscuschat.ui.loading.LoadingActivity">
+    tools:context="com.qiscus.qiscusmultichannel.ui.loading.LoadingActivity">
 
     <ProgressBar
         android:id="@+id/progress_bar"
