--- a/multichannel-widget/src/main/res/layout/activity_login.xml
+++ b/multichannel-widget/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.qiscus.qiscuschat.ui.login.LoginActivity">
+    tools:context="com.qiscus.qiscusmultichannel.ui.login.LoginActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
