--- a/multichannel-widget/src/main/res/layout/activity_web_view_mc.xml
+++ b/multichannel-widget/src/main/res/layout/activity_web_view_mc.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.qiscus.qiscuschat.ui.webView.WebViewActivity">
+    tools:context="com.qiscus.qiscusmultichannel.ui.webView.WebViewActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
