--- a/multichannel-widget/src/main/res/layout/image_dialog_view_mc.xml
+++ b/multichannel-widget/src/main/res/layout/image_dialog_view_mc.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
 
-    <com.qiscus.qiscuschat.ui.chat.image.QiscusTouchImageView
+    <com.qiscus.qiscusmultichannel.ui.chat.image.QiscusTouchImageView
         android:id="@+id/ivDialogView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
